Ajoute spotless au projet
Change-Id: Iae4b61de0e37243c1661d862cf0baff6e4e6e01d